Fix git authentication

--- a/.ssh/config
+++ b/.ssh/config
@@ -6,3 +6,8 @@ Host kirby
     HostName kirby.ecohealthalliance.org
     User noamross
 
+Host *
+ AddKeysToAgent yes
+ UseKeychain yes
+ IdentityFile ~/.ssh/id_rsa
+ 
